# iced_shell

./: Cargo.toml
src/: main.rs
src/gui/: layout.rs  layout_copy.rs  mod.rs
src/gui/content/: mod.rs  sys_info.rs
src/gui/left/: left_navigation.rs  mod.rs
src/gui/left_navigation/: left_navigation.rs
src/gui/top/: mod.rs  top_navigation.rs
src/gui/top_navigation/: mod.rs  session_window.rs  top_navigation.rs
src/icons/: icon.icns
