[package]
name = "iced_shell"
version = "0.1.0"
edition = "2024"



[dependencies]
    iced = {version = "0.13.1", features = ["default", "advanced", "debug", "lazy", "wgpu"]}
    image="0.24"
    tray-icon = "0.14"
    winit = "0.29"
    sysinfo = "0.30"
    wmi = "0.13"
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"
